# focular

./: README.md  com.envoid.focular.json  package-lock.json  package.json  postcss.config.js  rollup.config.js  tailwind.config.js  tsconfig.json
src/: App.svelte  backup.svelte  global.d.ts
src-tauri/: .env  Cargo.toml  args.txt  tauri.conf.json
src-tauri/bindings/: Preferences.ts  SmartFolder.ts
src-tauri/migrations/2022-06-04-092241_create_metadata/: down.sql  up.sql
src-tauri/migrations/2022-08-05-111101_create_smart_folder/: down.sql  up.sql
src-tauri/src/: content_manager.rs  database.rs  directory.rs  file_utils.rs  foc_error.rs  main.rs  preferences.rs  schema.rs  searcher.rs  web_extension.rs
src-tauri/src/models/: metadata.rs  mod.rs  smart_folder.rs
src/code/: ContentManager.ts  FocError.ts  FolderManager.ts  RequestManager.ts  filterStore.ts  settingsStore.ts  valuesStore.ts
src/components/: FileDropper.svelte  FolderPicker.svelte  Modal.svelte  SearchableDropdown.svelte  TestComp.svelte  booleanStore.js
src/components/contextMenu/: ContextMenu.svelte  ContextMenuDivider.svelte  ContextOption.svelte  ContextOptionIcon.svelte
src/components/gallery/: Content.svelte  Gallery.svelte  Link.svelte  Other.svelte  Picture.svelte  Video.svelte
src/components/gallery/filter/: FilterBar.svelte  OrderMenu.svelte
src/components/gallery/filter/filterWindows/: FilterDateMenu.svelte  FilterTagsMenu.svelte  (+1 more)
src/components/gallery/inspector/: Inspector.svelte
src/components/hooks/: clickOutside.ts  popover.ts
src/components/sidebar/: SideBar.svelte  SideBarIcon.svelte
src/components/splitPane/: HSplitPane.svelte  VSplitPane.svelte
src/pages/: All.svelte  Preferences.svelte  Untagged.svelte
src/types/: ContentType.ts  FocError.ts  Metadata.ts  Status.ts  TagProps.ts
(+6 files in other folders)
