[package]
name = "focular"
version = "1.0.0"
description = "A simple and powerful personal knowledge management system"
authors = ["caleidon"]
license = ""
repository = ""
default-run = "focular"
edition = "2021"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-all", "fs-all", "path-all", "protocol-asset", "shell-open", "window-close"] }
thiserror = "1.0.31"
tantivy = "0.18.0"
once_cell = "1.13.0"
sha2 = "0.10.2"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
rayon = "1.5.3"
memmap2 = "0.5.5"
interprocess = "1.1.1"
notify = "4.0.17"
mime = "0.3.16"
image = "0.24.3"
base64 = "0.13.0"
thumbnailer = "0.4.0"
audio-video-metadata = "0.1.7"
diesel = { version = "2.0.0-rc.1", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0-rc.1"
libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
r2d2 = "0.8.10"
infer = "0.9.0"
ts-rs = "6.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
